# groth-pairing

./: .gitignore  CHANGELOG.md  COPYRIGHT.md  LICENSE  README.md  groth-pairing.cabal
src/: BLS12381.hs  BN128.hs  Utils.hs
src/Groth16/: Proof.hs  proof.json  verification_key.json
test/: bp128.hs  bp381.hs
