cabal-version:      2.4
name:               groth-pairing
version:            0.1.0.0
synopsis:           Elliptic curve pairing.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Modulo-P
maintainer:         info@modulo-p.io

-- A copyright notice.
-- copyright:
category:           ZKP
extra-source-files: CHANGELOG.md

library
    exposed-modules:  BN128, MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable ecpairing
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        groth-pairing

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ecpairing-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
