cabal-version:      3.6
name:               groth-pairing
version:            0.1.0.0
synopsis:           Elliptic curve pairing.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Modulo-P
maintainer:         info@modulo-p.io

-- A copyright notice.
-- copyright:
category:           ZKP
extra-source-files: CHANGELOG.md

common common-all
    build-depends:    
        base ^>=4.17.2.0,
        QuickCheck
        --cabal-test-quickcheck >= 0.1,
        --Cabal >= 3.6.2.0
    default-language: Haskell2010


library
    import: common-all
    exposed-modules:  BLS12381, BN128, Utils, Groth16.Proof

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    hs-source-dirs:   src

executable pairing
    import:           common-all
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    hs-source-dirs:   app


test-suite bilineal-property-381
    import:           common-all
    main-is:          bp381.hs
    hs-source-dirs:   test, src
    type:             exitcode-stdio-1.0

test-suite bilineal-property-128
    import:           common-all
    main-is:          bp128.hs
    hs-source-dirs:   test, src
    type:             exitcode-stdio-1.0
    

  


    
